xml2csv/xml2csv3010/notes.dg.txt

1.

C:\0>python 
\\corp-fs01\CORP-PM\data_eng\project_folders\3010_python\xml2csv\xmltocsv_any_prompts_argparse.py \\10.4.65.190\Images\mcdata\mc_6365_vision\image_data\S1 Inner Rim\20220620 .  configa.yml

usage: xmltocsv_any_prompts_argparse.py [-h] [--yesterday] source destination config
xmltocsv_any_prompts_argparse.py: error: unrecognized arguments: . configa.yml

2.
python 
\\corp-fs01\CORP-PM\data_eng\project_folders\3010_python\xml2csv\xmltocsv_any_prompts_argparse.py \\10.4.65.190\Images\mcdata\mc_6365_vision\image_data\S1 Inner Rim\20220620 c:\0  configa.yml



C:\0>python
Python 3.9.9 (tags/v3.9.9:ccb0e6a, Nov 15 2021, 18:08:50) [MSC v.1929 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> \\corp-fs01\CORP-PM\data_eng\project_folders\3010_python\xml2csv\xmltocsv_any_prompts_argparse.py \\10.4.65.190\Images\mcdata\mc_6365_vision\image_data\S1 Inner Rim\20220620 c:\0  configa.yml
  File "<stdin>", line 1
    \\corp-fs01\CORP-PM\data_eng\project_folders\3010_python\xml2csv\xmltocsv_any_prompts_argparse.py \\10.4.65.190\Images\mcdata\mc_6365_vision\image_data\S1 Inner Rim\20220620 c:\0  configa.yml
     ^
SyntaxError: unexpected character after line continuation character
>>>
>>>

3.

python 
\\corp-fs01\CORP-PM\data_eng\project_folders\3010_python\xml2csv\xmltocsv_any_prompts_argparse.py //10.4.65.190/Images/mcdata/mc_6365_vision/image_data/S1 Inner Rim/20220620 c:/0  configa.yml


C:\0>python
Python 3.9.9 (tags/v3.9.9:ccb0e6a, Nov 15 2021, 18:08:50) [MSC v.1929 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> \\corp-fs01\CORP-PM\data_eng\project_folders\3010_python\xml2csv\xmltocsv_any_prompts_argparse.py //10.4.65.190/Images/mcdata/mc_6365_vision/image_data/S1 Inner Rim/20220620 c:/0  configa.yml
  File "<stdin>", line 1
    \\corp-fs01\CORP-PM\data_eng\project_folders\3010_python\xml2csv\xmltocsv_any_prompts_argparse.py //10.4.65.190/Images/mcdata/mc_6365_vision/image_data/S1 Inner Rim/20220620 c:/0  configa.yml
     ^
SyntaxError: unexpected character after line continuation character
>>>

4.

python 
\\corp-fs01\CORP-PM\data_eng\project_folders\3010_python\xml2csv\xmltocsv_any_prompts_argparse.py "//10.4.65.190/Images/mcdata/mc_6365_vision/image_data/S1 Inner Rim/20220620" c:/0  configa.yml

5.

python 
\\corp-fs01\CORP-PM\data_eng\project_folders\3010_python\xml2csv\xmltocsv_any_prompts_argparse.py "//10.4.65.190/Images/mcdata/mc_6365_vision/image_data" c:/0  configa.yml


C:\0>python
Python 3.9.9 (tags/v3.9.9:ccb0e6a, Nov 15 2021, 18:08:50) [MSC v.1929 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> \\corp-fs01\CORP-PM\data_eng\project_folders\3010_python\xml2csv\xmltocsv_any_prompts_argparse.py "//10.4.65.190/Images/mcdata/mc_6365_vision/image_data" c:/0  configa.yml
  File "<stdin>", line 1
    \\corp-fs01\CORP-PM\data_eng\project_folders\3010_python\xml2csv\xmltocsv_any_prompts_argparse.py "//10.4.65.190/Images/mcdata/mc_6365_vision/image_data" c:/0  configa.yml
     ^
SyntaxError: unexpected character after line continuation character
>>>

